--- a/BeautifulSoup/website.html
+++ b/BeautifulSoup/website.html
@@ -3,11 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Angela's Personal Site</title>
+	<title>Angel's Personal Site</title>
 </head>
 
 <body>
-	<h1 id="name">Angela Yu</h1>
+	<h1 id="name">Angel Yu</h1>
 	<p><em>Founder of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
 	<p>I am an iOS and Web Developer. I ❤️ coffee and motorcycles.</p>
 	<hr>
@@ -19,8 +19,6 @@
 	</ul>
 	<hr>
 	<h3 class="heading">Other Pages</h3>
-	<a href="https://angelabauer.github.io/cv/hobbies.html">My Hobbies</a>
-	<a href="https://angelabauer.github.io/cv/contact-me.html">Contact Me</a>
 </body>
 
 </html>
